# Secret-of-Excellence-and-Elegance-Establishment-Store

./: .dockerignore  .env.example  .gitignore  .replit  Dockerfile  README.md  docker-compose.sqlite.yml  docker-compose.yml  main.py  pyproject.toml  render.yaml  replit.md  requirements.txt  start.sh
.agents/memory/: MEMORY.md  bcrypt-passlib.md  jinja2-template-response.md
app/api/admin/: routes.py
app/api/payments/: routes.py
app/api/public/: routes.py
app/config/: settings.py
app/database/: connection.py
app/integrations/beezati/: client.py
app/integrations/moyasar/: client.py
app/integrations/paypal/: client.py
app/middleware/: security.py
app/models/: __init__.py  logs.py  order.py  payment.py  payment_link.py  service.py  user.py
app/repositories/: payment_repo.py  service_repo.py  user_repo.py
app/schemas/: payment.py  service.py  user.py
app/security/: jwt.py
app/services/: auth_service.py
app/templates/: base.html  home.html  invoice.html  pay.html  pay_expired.html  payment_failed.html  payment_success.html
app/templates/admin/: base_admin.html  dashboard.html  orders.html  payment_links.html  services.html  users.html
app/utils/: pdf.py  qr.py
attached_assets/: Pasted--Expert-Prompt-Build-a-Lightweight-Payment-Checkout-Pla_1783874114827.txt  Pasted--G-Gamal-s-workspace-A-Secret-of-Excellence-and-Eleganc_1783876055351.txt
